--- a/log_in_site.html
+++ b/log_in_site.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="login.css">
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
 </head>
 
 <body>
@@ -26,14 +26,12 @@
                     <h1 class="login-hdl">Log in</h1>
                 </div>
                 <form action="index.html" method="post" class="log-in-form">
-                    <!-- <label for="email">Email</label> -->
                     <div class="input-cnt">
                         <input class="login-input" type="email" id="email" name="email" required placeholder="Email">
-                        <svg class="input-icon">
+                        <svg class="input-icon" width="24" height="24">
                             <use href="assets/svg/sprite.svg#mail_icon"></use>
                         </svg>
                     </div>
-                    <!-- <label for="password">Password</label> -->
                     <div class="input-cnt">
                         <input class="login-input" type="password" id="password" name="password" required
                             placeholder="Password">
