--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub TEST</title>
+    <title>Join</title>
 
 </head>
 <body>
-
-    <h1>GitHub Test</h1>
-
-    <h2>Test</h2>
-
-    <h3>Veli Test</h3>
-
-    <h1>Test Gyözö</h1>
-    
+    <div class="left"></div>
+    <div class="right">
+        <head></head>
+        <main></main>
+    </div>
 </body>
 </html>
