Template index.html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
 
+    <script src="./script.js"></script>
+    <script src="./script/template.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-<body>
-    <div class="left"></div>
-    <div class="right">
-        <head></head>
-        <main></main>
-    </div>
+<body onload="init()" id="body">
+    
 </body>
 </html>
