--- a/log_in_site.html
+++ b/log_in_site.html
@@ -11,7 +11,10 @@
 
 <body>
 
-    <main class="log_in">
+    <main class="main-login">
+        <div class="logo-cnt">
+            <img src="assets/png/join_logo.png" alt="Join Logo" class="logo">
+        </div>
 
         <header>
             <p>
@@ -36,18 +39,21 @@
                         <input class="login-input" type="password" id="password" name="password" required
                             placeholder="Password">
                         <svg class="input-icon" width="24" height="24">
-                            <use href="assets/svg/sprite.svg#password_icon_test"></use>
+                            <use href="assets/svg/sprite.svg#password_icon                "></use>
                         </svg>
                     </div>
 
                 </form>
                 <div class="form-btn-cnt">
                     <button type="submit" class="btn btn-primary">Log in</button>
-                    <button type="button" class="btn-secondary">Guest log in</button>
+                    <button type="button" class="btn btn-secondary">Guest log in</button>
                 </div>
             </div>
         </div>
-        <footer></footer>
+        <footer class="footer-login">
+            <a href="privacy_policy.html">Privacy Policy</a>
+            <a href="legal_notice.html">Legal notice</a>
+        </footer>
     </main>
     <script src="script.js"></script>
 </body>
