sidebar-header optimiert und css hinzugefügt

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join</title>
 
     <script src="./script.js"></script>
     <script src="./script/template.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="./style.css">
-</head>
-<body onload="init()" id="body">
+    <script src="./script/header.js"></script>
     
-</body>
+
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/header.css" />
+    <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
+  </head>
+  <body onload="init()" id="body"></body>
 </html>
