createt html sites and added javascript for sidebar

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add task</title>
-
+    <title>Contact</title>
     <script src="./script.js"></script>
     <script src="./script/template.js"></script>
     <script src="./script/header.js"></script>
