--- a/board.html
+++ b/board.html
@@ -8,6 +8,7 @@
     <script src="./script.js"></script>
     <script src="./script/template.js"></script>
     <script src="./script/header.js"></script>
+    <script src="./script/navigate.js"></script>
     
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
