--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <script src="./script/header.js"></script>
     <script src="./script/navigate.js"></script>
 
+    <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" type="text/css" href="./css/header.css" />
     <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
