Add privacy policy page; apply Prettier formatting across all files

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Join</title>
 
     <script src="./script.js"></script>
-    <script src="./script/template.js"></script>
-    <script src="./script/header.js"></script>
-    <script src="./script/navigate.js"></script>
-    
+    <script src="./scripts/template.js"></script>
+    <script src="./scripts/header.js"></script>
+    <script src="./scripts/navigate.js"></script>
+
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" type="text/css" href="./css/header.css" />
