--- a/legal_notice.html
+++ b/legal_notice.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Legal Notice</title>
 
-    <script src="./script/header.js"></script>
-    <script src="./script/navigate.js"></script>
+    <script src="./scripts/header.js"></script>
+    <script src="./scripts/navigate.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -36,7 +36,7 @@
           </a>
         </nav>
         <div class="sidebar-footer">
-          <a href="#">Privacy Policy</a>
+          <a href="privacy_policy.html">Privacy Policy</a>
           <a href="legal_notice.html">Legal Notice</a>
         </div>
       </div>
