--- a/add_task.html
+++ b/add_task.html
@@ -6,9 +6,9 @@
     <title>Add task</title>
 
     <script src="./script.js"></script>
-    <script src="./script/template.js"></script>
-    <script src="./script/header.js"></script>
-    <script src="./script/navigate.js"></script>
+    <script src="./scripts/template.js"></script>
+    <script src="./scripts/header.js"></script>
+    <script src="./scripts/navigate.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
