--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
     <script src="./script.js"></script>
-    <script src="./script/template.js"></script>
-    <script src="./script/header.js"></script>
-    <script src="./script/navigate.js"></script>
+    <script src="./scripts/template.js"></script>
+    <script src="./scripts/header.js"></script>
+    <script src="./scripts/navigate.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
