--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" type="text/css" href="./css/header.css" />
     <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
-    <link rel="stylesheet" type="text/css" href="./css/legal_notice.css" />
+    <link rel="stylesheet" type="text/css" href="./css/privacy_policy.css" />
   </head>
 
   <body>
@@ -51,7 +51,7 @@
           </div>
         </header>
 
-        <div class="privacy_policy_text">
+        <div class="privacy_policy">
           <h1>Privacy Policy</h1>
 
           <h2>Data Collection and Use</h2>
