signup.html and singup.css added

--- a/login.html
+++ b/login.html
@@ -12,15 +12,17 @@
 <body>
 
     <main class="main-login">
+        <div class="animation">
+        </div>
         <div class="logo-cnt">
             <img src="assets/png/join_logo.png" alt="Join Logo" class="logo">
         </div>
 
         <header>
-            <p>
+            <span>
                 Not a Join user?
-            </p>
-            <a class="btn" href="sign_up_site.html">Sign up</a>
+            </span>
+            <a class="btn" href="signup.html">Sign up</a>
         </header>
 
         <div class="login">
@@ -41,6 +43,7 @@
                         <svg class="input-icon" width="24" height="24">
                             <use href="assets/svg/sprite.svg#password_icon"></use>
                         </svg>
+                        <p class="input-warning d-none">Check your email and password. Please try again.</p>
                     </div>
 
                 </form>
