--- a/board.html
+++ b/board.html
@@ -9,6 +9,7 @@
     <script src="./scripts/template.js"></script>
     <script src="./scripts/header.js"></script>
     <script src="./scripts/navigate.js"></script>
+    <script src="./scripts/board_template.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
