--- a/header.html
+++ b/header.html
@@ -10,8 +10,14 @@
     <header class="header">
       <div class="header-content">
         <span class="header-title">Kanban Project Management Tool</span>
-        <div class="header-user">
-          <span class="initials">SM</span>
+
+        <div class="user-wrapper">
+          <a href="help.html" class="help">
+            <img src="assets/svg/help.svg" alt="Help" />
+          </a>
+          <div class="header-user">
+            <span class="initials">SM</span>
+          </div>
         </div>
       </div>
     </header>
