--- a/signup.html
+++ b/signup.html
@@ -48,7 +48,7 @@
                         <svg class="input-icon" width="24" height="24">
                             <use href="assets/svg/sprite.svg#password_icon"></use>
                         </svg>
-                        <p class="input-warning d-none">Check your email and password. Please try again.</p>
+                        <p class="input-warning d-none">Your passwords don't match. Please try again.</p>
                     </div>
                     <div class="accept-cnt">
                         <input type="checkbox" id="privacyCheckbox" name="privacyPolicy" required>
