Styling updates and form validation enhancements for signup and login pages

--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                         </svg>
                     </div>
                     <div class="input-cnt">
-                        <input class="login-input" type="password" id="password" name="password" required
+                        <input class="login-input" type="password" id="password" name="password" minlength="2" required
                             placeholder="Password" />
                         <svg class="input-icon" width="24" height="24">
                             <use href="assets/svg/sprite.svg#password_icon"></use>
