--- a/signup.html
+++ b/signup.html
@@ -22,16 +22,17 @@
             </a>
             <div class="signup-cnt">
                 <h1 class="signup-hdl">Sign up</h1>
-                <form onsubmit="formValidation(event)" class="signin-form">
+                <form onsubmit="addUser(); return false;" class="signup-form">
                     <div class="input-cnt">
-                        <input class="signup-input" type="text" id="signup_name" name="name" autocomplete="on" required
-                            placeholder="Name" />
+                        <input oninput="checkFormValidity();" class="signup-input" type="text" id="signup_name"
+                            name="name" autocomplete="on" required placeholder="Name" />
                         <svg class="input-icon" width="24" height="24">
                             <use href="assets/svg/sprite.svg#person_icon"></use>
                         </svg>
                     </div>
                     <div class="input-cnt">
-                        <input class="signup-input" type="email" id="signup_email" name="email" autocomplete="on"
+                        <input oninput="checkFormValidity();" class="signup-input" type="email" id="signup_email"
+                            name="email" autocomplete="on"
                             pattern="(?:[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+(?:\.[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+)*|\u0022(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*\u0022)@(?:(?:[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9\-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])"
                             required placeholder="Email" />
                         <svg class="input-icon" width="24" height="24">
@@ -39,23 +40,30 @@
                         </svg>
                     </div>
                     <div class="input-cnt">
-                        <input class="signup-input" type="password" id="signup_password" name="password" required
-                            minlength="8" placeholder="Password" />
-                        <svg class="input-icon" width="24" height="24">
-                            <use href="assets/svg/sprite.svg#password_icon"></use>
-                        </svg>
+                        <input
+                            oninput="passwordOption('signup_password', 'password_cnt', 'password_icon'); checkFormValidity()"
+                            class="signup-input" type="password" id="signup_password" name="password" required
+                            minlength="2" placeholder="Password" />
+
+                        <div id="password_cnt" class="input-icon-cnt">
+                            <img id="password_icon" src="assets/png/lock.png">
+                        </div>
                     </div>
                     <div class="input-cnt">
-                        <input class="signup-input" type="password" id="signup_confirm_password" name="password"
-                            required minlength="8" placeholder="Confirm Password" />
-                        <svg class="input-icon" width="24" height="24">
-                            <use href="assets/svg/sprite.svg#password_icon"></use>
-                        </svg>
+                        <input
+                            oninput="passwordOption('signup_confirm_password', 'confirm_password_cnt', 'confirm_password_icon'); checkFormValidity()"
+                            class="signup-input" type="password" id="signup_confirm_password" name="password" required
+                            minlength="2" placeholder="Confirm Password" />
+
+                        <div id="confirm_password_cnt" class="input-icon-cnt">
+                            <img id="confirm_password_icon" src="assets/png/lock.png" alt="">
+                        </div>
                         <p id="signup_warning" class="input-warning d-none">Your passwords don't match. Please try
                             again.</p>
                     </div>
                     <div class="accept-cnt">
-                        <input type="checkbox" id="signup_privacyCheckbox" name="privacyPolicy" required>
+                        <input onchange="checkFormValidity()" type="checkbox" id="signup_privacyCheckbox"
+                            name="privacyPolicy" required>
                         <label for="signup_privacyCheckbox">
                             <img class="check-box-png" src="" alt="Check Box" />
                             <span>
@@ -65,19 +73,24 @@
                         </label>
                     </div>
                     <div class="form-btn-cnt">
-                        <button type="submit" class="btn btn-primary">Sign up</button>
+                        <button id="signup_btn" type="submit" class="btn btn-primary" disabled>Sign up</button>
                     </div>
                 </form>
-                <!-- <div class="form-btn-cnt">
-                    <button type="submit" class="btn btn-primary">Sign up</button>
-                </div> -->
             </div>
         </div>
+
+        <button onclick="showSuccessMsg()">signup</button>
         <footer class="footer-login-signup">
             <a href="privacy_policy.html">Privacy Policy</a>
             <a href="legal_notice.html">Legal notice</a>
         </footer>
     </main>
+    <div class="success-message-cnt" id="success-message-cnt">
+        <div class="success-message" id="success-message">
+            <span>You Signed Up successfully</span>
+        </div>
+    </div>
     <script src="scripts/login_signup.js"></script>
+    <script src="scripts/login_signup_template.js"></script>
 </body>
 </html>
