--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
-    <script src="./script.js"></script>
-    <script src="./scripts/template.js"></script>
-    <script src="./scripts/header.js"></script>
-    <script src="./scripts/navigate.js"></script>
+    <title>Contacts</title>
+
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-database-compat.js"></script>
+
+    <script src="./scripts/template.js" defer></script>
+    <script src="./scripts/header.js" defer></script>
+    <script src="./scripts/navigate.js" defer></script>
+    <script src="./scripts/contact.js" defer></script>
+    <script src="./scripts/contact_template.js" defer></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="stylesheet" type="text/css" href="./css/header.css" />
-    <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/sidebar.css" />
+    <link rel="stylesheet" href="./css/contact.css" />
   </head>
-  <body onload="init()" id="body"></body>
+
+  <body onload="initContacts()" id="body"></body>
 </html>
