--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,15 @@
     <script src="./scripts/template.js" defer></script>
     <script src="./scripts/header.js" defer></script>
     <script src="./scripts/navigate.js" defer></script>
-    <script src="./scripts/contact.js" defer></script>
     <script src="./scripts/contact_template.js" defer></script>
+    <script src="./scripts/contact.js" defer></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/sidebar.css" />
     <link rel="stylesheet" href="./css/contact.css" />
+    <link rel="stylesheet" href="./css/add_contact_overlay.css" />
   </head>
 
   <body onload="initContacts()" id="body"></body>
