--- a/signup.html
+++ b/signup.html
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <button onclick="showSuccessMsg()">signup</button>
+        <!-- <button onclick="showSuccessMsg()">signup</button> -->
         <footer class="footer-login-signup">
             <a href="privacy_policy.html">Privacy Policy</a>
             <a href="legal_notice.html">Legal notice</a>
