--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="signup">
-            <a class="btn-back" href="login.html">
+            <a class="btn-back" href="index.html">
                 <svg class="arrow-left" width="32" height="32">
                     <use href="assets/svg/sprite.svg#arrow_left"></use>
                 </svg>
@@ -24,42 +24,44 @@
                 <h1 class="signup-hdl">Sign up</h1>
                 <form onsubmit="addUser(); return false;" class="signup-form">
                     <div class="input-cnt">
-                        <input oninput="checkFormValidity();" class="signup-input" type="text" id="signup_name"
-                            name="name" autocomplete="on" required placeholder="Name" />
+                        <input oninput="checkFormValidity(); validateName()" class="signup-input" type="text"
+                            id="signup_name" name="name" autocomplete="name" placeholder="Name" minlength="6"
+                            required />
                         <svg class="input-icon" width="24" height="24">
                             <use href="assets/svg/sprite.svg#person_icon"></use>
                         </svg>
+                        <p id="signup_warning_name" class="input-warning"></p>
                     </div>
                     <div class="input-cnt">
-                        <input oninput="checkFormValidity();" class="signup-input" type="email" id="signup_email"
-                            name="email" autocomplete="on"
-                            pattern="(?:[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+(?:\.[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+)*|\u0022(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*\u0022)@(?:(?:[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9\-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])"
-                            required placeholder="Email" />
+                        <input oninput="checkFormValidity(); validateEmail()" class="signup-input" type="email"
+                            id="signup_email" name="email" autocomplete="on" required placeholder="Email" />
                         <svg class="input-icon" width="24" height="24">
                             <use href="assets/svg/sprite.svg#mail_icon"></use>
                         </svg>
+                        <p id="signup_warning_email" class="input-warning"></p>
                     </div>
                     <div class="input-cnt">
                         <input
-                            oninput="passwordOption('signup_password', 'password_cnt', 'password_icon'); checkFormValidity()"
+                            oninput="passwordOption('signup_password', 'password_cnt', 'password_icon'); checkFormValidity(); validatePassword()"
                             class="signup-input" type="password" id="signup_password" name="password" required
-                            minlength="2" placeholder="Password" />
+                            minlength="8" placeholder="Password" />
 
                         <div id="password_cnt" class="input-icon-cnt">
                             <img id="password_icon" src="assets/png/lock.png">
                         </div>
+                        <p id="signup_warning_password" class="input-warning"></p>
+
                     </div>
                     <div class="input-cnt">
                         <input
-                            oninput="passwordOption('signup_confirm_password', 'confirm_password_cnt', 'confirm_password_icon'); checkFormValidity()"
+                            oninput="passwordOption('signup_confirm_password', 'confirm_password_cnt', 'confirm_password_icon'); checkFormValidity(); validateConfirmPassword()"
                             class="signup-input" type="password" id="signup_confirm_password" name="password" required
-                            minlength="2" placeholder="Confirm Password" />
+                            minlength="8" placeholder="Confirm Password" />
 
                         <div id="confirm_password_cnt" class="input-icon-cnt">
                             <img id="confirm_password_icon" src="assets/png/lock.png" alt="">
                         </div>
-                        <p id="signup_warning" class="input-warning d-none">Your passwords don't match. Please try
-                            again.</p>
+                        <p id="signup_warning_confirm_password" class="input-warning"></p>
                     </div>
                     <div class="accept-cnt">
                         <input onchange="checkFormValidity()" type="checkbox" id="signup_privacyCheckbox"
@@ -67,10 +69,10 @@
                         <label for="signup_privacyCheckbox">
                             <img class="check-box-png" src="" alt="Check Box" />
                             <span>
-                                I accept the <a href="privacy_policy.html">Privacy
-                                    Policy</a>
+                                I accept the <a href="privacy_policy.html">Privacy Policy</a>
                             </span>
                         </label>
+
                     </div>
                     <div class="form-btn-cnt">
                         <button id="signup_btn" type="submit" class="btn btn-primary" disabled>Sign up</button>
