Change the onload-handler in summary.html from init() to initSummary()

--- a/summary.html
+++ b/summary.html
@@ -9,11 +9,12 @@
     <script src="./scripts/template.js"></script>
     <script src="./scripts/header.js"></script>
     <script src="./scripts/navigate.js"></script>
+    <script src="./scripts/summary.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" type="text/css" href="./css/header.css" />
     <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
   </head>
-  <body onload="init()" id="body"></body>
+  <body onload="initSummary()" id="body"></body>
 </html>
