Add CSS styles for the summary page and update the HTML structure

--- a/summary.html
+++ b/summary.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" type="text/css" href="./css/header.css" />
     <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
+    <link rel="stylesheet" type="text/css" href="./css/summary.css" />
   </head>
   <body onload="initSummary()" id="body"></body>
 </html>
