--- a/board.html
+++ b/board.html
@@ -10,11 +10,13 @@
     <script src="./scripts/header.js"></script>
     <script src="./scripts/navigate.js"></script>
     <script src="./scripts/board_template.js"></script>
+    <script src="./scripts/board.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" type="text/css" href="./css/header.css" />
     <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
+    <link rel="stylesheet" type="text/css" href="./css/board.css" />
   </head>
-  <body onload="init()" id="body"></body>
+  <body onload="initBoard()" id="body"></body>
 </html>
