edited start animation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 
 <body onload="init()">
     <main class="main-login">
-        <div class="animation"></div>
+        <div class="animation">
+            <div class="animation-logo-cnt">
+                <!-- <img src="assets/png/join_logo.png" alt="Join Logo" class="logo" /> -->
+                <!-- <svg class="svg-logo" class="input-icon">
+                    <use href="assets/svg/sprite.svg#join_logo"></use>
+                </svg> -->
+            </div>
+        </div>
+
         <div class="logo-cnt">
-            <img src="assets/png/join_logo.png" alt="Join Logo" class="logo" />
+            <img src="assets/png/join_logo.png" alt="Join Logo" class="join-logo" />
         </div>
 
         <header class="header-login">
