--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="login-signup">
             <div class="login-cnt">
                 <h1 class="login-signup-hdl">Log in</h1>
-                <form onsubmit="loginUser(); return false;" class="login-form">
+                <form onsubmit="handleLoginSubmit(); return false;" class="login-form">
                     <div class="input-cnt">
                         <input oninput="validateLoginEmail(); checkLoginFormValidity()" class="login-signup-input"
                             type="email" id="login_email" name="email" required placeholder="Email" />
