--- a/signup.html
+++ b/signup.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="/css/signup.css" />
-    <link rel="stylesheet" type="text/css" href="/css/login.css" />
+    <link rel="stylesheet" type="text/css" href="./css/signup.css" />
+    <link rel="stylesheet" type="text/css" href="./css/login.css" />
 </head>
 
 <body onload="init()">
